# pixel-back

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260525_0001_initial_schema.py  20260525_0002_user_avatar_url.py  20260527_0003_password_auth.py
app/: crud.py  main.py  models.py
app/api/: deps.py  main.py
app/api/routes/: exports.py  folders.py  login.py  projects.py  resources.py  revisions.py  users.py  workspace.py
app/core/: config.py  db.py  email.py  security.py
tests/: test_auth.py
